modules/security_group/main.tf

resource "aws_security_group" "alb_sg" {
    name = "alb-security-group"
    vpc_id = var.vpc_id
    description = "Security group for ALB"
    ingress {
        from_port = 80
        to_port = 80    
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 443
        to_port = 443    
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress{
        from_port = 0
        to_port = 0    
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
